--- a/src/pages/Chat/Chat.hbs
+++ b/src/pages/Chat/Chat.hbs
@@ -66,36 +66,6 @@
     {{/if}}
   </div>
   {{#if activeChain.participants}}
-    <div class="chat__participants">
-      <div class="participant__block_title">Участники</div>
-      {{#each activeChain.participants}}
-        <div class="participant">
-          <div class="participant__avatar">
-            {{#if avatar}}
-              <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{avatar}}" alt="">
-            {{/if}}
-          </div>
-          <div class="participant__name">
-            {{first_name}} {{second_name}}
-          </div>
-          <div class="participant__action"></div>
-        </div>
-      {{/each}}
-
-      <div class="participant__suggest_title">Предложения</div>
-      {{#each activeChain.participants}}
-        <div class="participant">
-          <div class="participant__avatar">
-            {{#if avatar}}
-              <img alt="avatar" src="https://ya-praktikum.tech/api/v2/resources/{{avatar}}" alt="">
-            {{/if}}
-          </div>
-          <div class="participant__name">
-            {{first_name}} {{second_name}}
-          </div>
-          <div class="participant__action"></div>
-        </div>
-      {{/each}}
-    </div>
+    {{{participants}}}
   {{/if}}
 </div>
